# lazynote

./: .gitignore  AGENTS.md  README.md  electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  pyproject.toml  release.sh  tsconfig.web.json  vite.config.js  vitest.config.ts
.github/workflows/: cd.yml  ci.yml  release.yml
antinote_qt/: __init__.py  __main__.py  app.py  bridge.py  editormodel.py  highlight.py  highlighter.py  notestate.py  shortcuts.py  store.py
antinote_qt/parse/: __init__.py  links.py  todo.py
antinote_qt/qml/: Editor.qml  EditorB.qml  Main.qml  SlashPicker.qml
app/main/: db.test.ts  db.ts  geometry.test.ts  geometry.ts  index.ts  ipc.ts  shortcuts.ts  store.ts  tray.ts  window.ts
app/preload/: index.ts
data/: com.honganh.antinote-qt.desktop  com.honganh.antinote-qt.metainfo.xml  com.honganh.antinote-qt.yml  com.honganh.lazynote.desktop  com.honganh.lazynote.metainfo.xml  com.honganh.lazynote.yml
docs/: index.html
docs/plans/: 2026-06-29-electron-rebuild-design.md  2026-06-29-electron-rebuild.md  2026-06-30-custom-font-design.md  2026-06-30-custom-font.md  2026-06-30-gtk4-python-port-design.md  2026-06-30-gtk4-python-port.md  2026-06-30-qtquick-pyside6-port-design.md  2026-06-30-qtquick-pyside6-port.md  2026-06-30-theme-toggle-design.md  (+3 more)
packaging/: build-deb.sh  lazynote.spec
tests/: test_bridge.py  test_db.py  test_editormodel.py  test_fonts.py  test_geometry.py  test_highlight.py  test_links.py  test_mode.py  test_notestate.py  test_obsidian.py  test_ocr.py  test_shorten.py  test_store.py  test_theme.py  test_todo.py
(+37 files in other folders)
