[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lazynote"
version = "0.1.9"
description = "A lightweight, native scratchpad for Linux, inspired by Antinote. Qt Quick + PySide6."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = ["PySide6>=6.8", "python-xlib>=0.33; sys_platform == 'linux'"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
lazynote = "lazynote.app:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["lazynote", "lazynote.parse"]

[tool.setuptools.package-data]
lazynote = ["qml/*.qml", "icon.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
